[package]
name = "oxideav-http"
version = "0.0.7"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-http"
authors = ["Mark Karpeles"]
description = "HTTP/HTTPS source driver for oxideav (pure-Rust via ureq + rustls + webpki-roots)"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-http"
keywords = ["multimedia", "http", "streaming", "io", "pure-rust"]
categories = ["multimedia", "network-programming"]

[features]
# Expose internal header parsers to the cargo-fuzz harness in `fuzz/`.
# Not part of the stable surface; published consumers should leave this
# off.
fuzz = []

[dependencies]
oxideav-core = "0.1"
oxideav-source = "0.1"
ureq = "3"
