[package]
name = "oxideav-http"
version = "0.0.8"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-http"
authors = ["Mark Karpeles"]
description = "HTTP/HTTPS source driver for oxideav (pure-Rust via ureq + rustls + webpki-roots)"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-http"
keywords = ["multimedia", "http", "streaming", "io", "pure-rust"]
categories = ["multimedia", "network-programming"]

[features]
# Expose internal header parsers to the cargo-fuzz harness in `fuzz/`.
# Not part of the stable surface; published consumers should leave this
# off.
fuzz = []

[dependencies]
oxideav-core = "0.1"
oxideav-source = "0.1"
# default-features turned off so that the transport's `gzip` / `brotli`
# auto-decompress shims are NOT in effect. RFC 9110 §8.4 requires us to
# surface a non-identity Content-Encoding to the caller — a transparently
# decompressed body would arrive without that header and with a
# Content-Length that no longer matches the bytes we read, defeating the
# byte-offset contract the source driver promises a demuxer. We keep
# the rustls TLS backend on so `https://` continues to work.
ureq = { version = "3", default-features = false, features = ["rustls"] }
