[package]
name = "oxideav-http"
version = "0.0.8"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-http"
authors = ["Mark Karpeles"]
description = "HTTP/HTTPS source driver for oxideav (pure-Rust via ureq + rustls + webpki-roots)"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-http"
keywords = ["multimedia", "http", "streaming", "io", "pure-rust"]
categories = ["multimedia", "network-programming"]

[features]
# Expose internal header parsers to the cargo-fuzz harness in `fuzz/`.
# Not part of the stable surface; published consumers should leave this
# off.
fuzz = []

[dependencies]
oxideav-core = "0.1"
oxideav-source = "0.1"
# default-features = false drops ureq's transparent gzip layer (its
# default feature set is ["rustls", "gzip"]). The driver requires the
# wire bytes to BE the representation bytes — it sends
# `Accept-Encoding: identity` (RFC 9110 §12.5.3) and hard-rejects any
# response that still carries a real `Content-Encoding` (§8.4:
# representation metadata describes the coded form, so byte ranges over
# a coded representation are useless to a demuxer). A client-side
# auto-decompressor would consume the `Content-Encoding` evidence
# before those checks run and redefine every byte count. `rustls` is
# kept so https keeps working unchanged.
ureq = { version = "3", default-features = false, features = ["rustls"] }
